--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-node_modules
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
 .env
+
+node_modules
+npm-debug.log
