--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": ">=1.2.0"
   },
   "scripts": {
-    "test": "mocha -R spec tests/*.js"
+    "test": "mocha -R spec tests/*.js",
+    "start": "nodemon app.js"
   }
 }
