--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "less": ">= 0.0.1",
     "jade": ">= 0.0.1",
     "yql": ">=0.4.8",
-    "cheerio": "~0.9.2"
+    "cheerio": "~0.9.2",
+    "hogan.js": "~2.0.0"
   },
   "devDependencies": {
     "mocha": ">=1.3.2",
