--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "scripts": {
     "test": "mocha -R spec tests/*.js",
     "start": "nodemon app.js"
+  },
+  "engines": {
+    "node": "0.6.x",
+    "npm": "1.0.x"
   }
 }
