--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
+  "name": "add-app",
+  "version": "0.1.0",
+  "private": false,
   "dependencies": {
     "express": "2.5.8",
     "less": ">= 0.0.1",
     "jade": ">= 0.0.1",
     "yql": ">=0.4.8",
-    "cheerio": "~0.9.2",
-    "hogan.js": "~2.0.0"
+    "cheerio": ">=0.9.2",
+    "hogan.js": ">=2.0.0"
   },
   "devDependencies": {
     "mocha": ">=1.3.2",
